<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SaveDataActivity">

    <EditText
        android:id="@+id/editData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/saveToPrefsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_to_prefs"
        app:layout_constraintTop_toBottomOf="@+id/editData"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/saveToStoreBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_to_store"
        app:layout_constraintTop_toBottomOf="@+id/saveToPrefsBtn"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/saveToDbBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_to_db"
        app:layout_constraintTop_toBottomOf="@+id/saveToStoreBtn"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/readFromPrefsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_from_prefs"
        app:layout_constraintStart_toEndOf="@+id/saveToPrefsBtn"
        app:layout_constraintTop_toBottomOf="@+id/editData"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/readFromStoreBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_from_store"
        app:layout_constraintStart_toEndOf="@+id/saveToStoreBtn"
        app:layout_constraintTop_toBottomOf="@+id/readFromPrefsBtn"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/readFromDbBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_from_db"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/saveToDbBtn"
        app:layout_constraintTop_toBottomOf="@+id/readFromStoreBtn" />

    <TextView
        android:id="@+id/dataTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readFromDbBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>